--- a/index.html
+++ b/index.html
@@ -991,23 +991,17 @@
             const searchInput = document.getElementById('searchInput');
             // --- FUNCIONES PARA RENDERIZAR ---
             function displayGames(gamesToShow) {
-                 gallery.innerHTML = '';
-                 const fragment = document.createDocumentFragment();
-                 gamesToShow.forEach(game => {
-                     if (game.tipo === 'juego') {
-                         const gameCard = document.createElement('div');
-                         gameCard.className = 'game-card';
-                         gameCard.innerHTML = `
-                             <img src="${game.imagen}" alt="${game.nombre}" class="game-image" onerror="this.onerror=null; this.parentElement.innerHTML='<div class=\"game-image fallback\">Imagen no disponible<br>${game.nombre}</div><div class=\"game-info\"><h3 class=\"game-title\">${game.nombre}</h3><p class=\"game-description\">${game.descripcion.substring(0, 100)}...</p><div class=\"game-meta\"><span class=\"rating\">${game.rating}</span><span class=\"downloads\">${game.downloads} descargas</span></div></div>'; this.parentElement.querySelector('.game-card').removeChild(this);">
-                             <div class="game-info">
-                                 <h3 class="game-title">${game.nombre}</h3>
-                                 <p class="game-description">${game.descripcion.substring(0, 100)}...</p>
-                                 <div class="game-meta">
-                                     <span class="rating">${game.rating}</span>
-                                     <span class="downloads">${game.downloads} descargas</span>
-                                 </div>
-                             </div>
-                         `;
+gameCard.innerHTML = `
+    <img src="${game.imagen}" alt="${game.nombre}" class="game-image" onerror="this.classList.add('image-error');">
+    <div class="game-info">
+        <h3 class="game-title">${game.nombre}</h3>
+        <p class="game-description">${game.descripcion.substring(0, 100)}...</p>
+        <div class="game-meta">
+            <span class="rating">${game.rating}</span>
+            <span class="downloads">${game.downloads} descargas</span>
+        </div>
+    </div>
+`;
                          // Añadir evento de clic a la tarjeta
                          gameCard.addEventListener('click', () => showGameDetails(game));
                          fragment.appendChild(gameCard);
@@ -1185,3 +1179,4 @@
     <script src="data.js"></script>
 </body>
 </html>
+
