--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
         function getTrailerId(gameName) {
              // Mapa básico de nombres de juegos a IDs de YouTube. Amplía según necesites.
              const trailerMap = {
-                 "Resident Evil 7: Biohazard": "Nwl3RkEHK4c",
+                 "Resident Evil 7: Biohazard": "RgYqQsbKn6w",
                  "Dead Island": "qBmHIX5Xrk4",
                  "Postal 2": "u8D5rkcX78M",
                  "Left 4 Dead 2": "ZR3OX5uJN8",
@@ -1194,5 +1194,6 @@ gameCard.innerHTML = `
     <script src="data.js"></script>
 </body>
 </html>
+
 
 
