--- a/index.html
+++ b/index.html
@@ -242,23 +242,8 @@
             display: block;
         }
         /* Fallback si la imagen no carga */
-/* Fallback si la imagen no carga */
-.game-image.image-error {
-    background-color: var(--primary-blue);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.8rem;
-    text-align: center;
-    min-height: 250px; /* Para mantener la altura */
-}
-
-.game-image.image-error::after {
-    content: "Imagen no disponible";
-    display: block;
-    padding: 10px;
-}
+        .game-image:image(unloaded) {
+             background-color: var(--primary-blue); /* Corregido: eliminado punto y coma extra */
         }
         .game-info {
             padding: 15px;
@@ -1006,17 +991,23 @@
             const searchInput = document.getElementById('searchInput');
             // --- FUNCIONES PARA RENDERIZAR ---
             function displayGames(gamesToShow) {
-gameCard.innerHTML = `
-    <img src="${game.imagen}" alt="${game.nombre}" class="game-image" onerror="this.classList.add('image-error');">
-    <div class="game-info">
-        <h3 class="game-title">${game.nombre}</h3>
-        <p class="game-description">${game.descripcion.substring(0, 100)}...</p>
-        <div class="game-meta">
-            <span class="rating">${game.rating}</span>
-            <span class="downloads">${game.downloads} descargas</span>
-        </div>
-    </div>
-`;
+                 gallery.innerHTML = '';
+                 const fragment = document.createDocumentFragment();
+                 gamesToShow.forEach(game => {
+                     if (game.tipo === 'juego') {
+                         const gameCard = document.createElement('div');
+                         gameCard.className = 'game-card';
+                         gameCard.innerHTML = `
+                             <img src="${game.imagen}" alt="${game.nombre}" class="game-image" onerror="this.onerror=null; this.parentElement.innerHTML='<div class=\"game-image fallback\">Imagen no disponible<br>${game.nombre}</div><div class=\"game-info\"><h3 class=\"game-title\">${game.nombre}</h3><p class=\"game-description\">${game.descripcion.substring(0, 100)}...</p><div class=\"game-meta\"><span class=\"rating\">${game.rating}</span><span class=\"downloads\">${game.downloads} descargas</span></div></div>'; this.parentElement.querySelector('.game-card').removeChild(this);">
+                             <div class="game-info">
+                                 <h3 class="game-title">${game.nombre}</h3>
+                                 <p class="game-description">${game.descripcion.substring(0, 100)}...</p>
+                                 <div class="game-meta">
+                                     <span class="rating">${game.rating}</span>
+                                     <span class="downloads">${game.downloads} descargas</span>
+                                 </div>
+                             </div>
+                         `;
                          // Añadir evento de clic a la tarjeta
                          gameCard.addEventListener('click', () => showGameDetails(game));
                          fragment.appendChild(gameCard);
@@ -1194,6 +1185,3 @@ gameCard.innerHTML = `
     <script src="data.js"></script>
 </body>
 </html>
-
-
-
