--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
                  "Jurassic World Evolution 2": "d8q331qkl5527mn", // Ejemplo real
                  "Far Cry 5": "lg6fpmp3f2uhuho", // Ejemplo real
                  "Fnaf Collection": "sbws8mnvrtkjno0", // Ejemplo real
-                 "Resident Evil 7: Biohazard": "uqduzvrhkb01kth", // Ejemplo real
+                 "Resident Evil 7: Biohazard": "RgYqQsbKn6w", // Ejemplo real
                  // ... añade más juegos y sus IDs de YouTube ...
              };
              return trailerMap[gameName] || "dQw4w9WgXcQ"; // Video por defecto si no se encuentra
@@ -1191,3 +1191,4 @@
     <script src="data.js"></script>
 </body>
 </html>
+
