--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <i class="fas fa-th-large"></i>
                 </button>
                 
-                <!-- Selector de tema ESTILIZADO -->
+                <!-- Selector de tema -->
                 <select id="themeSelector" class="theme-selector">
                     <option value="dark">Oscuro</option>
                     <option value="light">Claro</option>
@@ -77,16 +77,16 @@
                 <!-- Los juegos se cargarán dinámicamente -->
             </div>
             
-           <!-- Paginación -->
-<div class="pagination-container">
-    <button id="prevPage" class="pagination-btn" disabled>
-        <i class="fas fa-chevron-left"></i> Anterior
-    </button>
-    <span id="pageInfo" class="page-info">Página 1 de 1</span>
-    <button id="nextPage" class="pagination-btn">
-        Siguiente <i class="fas fa-chevron-right"></i>
-    </button>
-</div>
+            <!-- Paginación -->
+            <div class="pagination-container">
+                <button id="prevPage" class="pagination-btn" disabled>
+                    <i class="fas fa-chevron-left"></i> Anterior
+                </button>
+                <span id="pageInfo" class="page-info">Página 1 de 1</span>
+                <button id="nextPage" class="pagination-btn">
+                    Siguiente <i class="fas fa-chevron-right"></i>
+                </button>
+            </div>
         </section>
 
         <!-- Sección de contacto -->
@@ -158,14 +158,8 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <!-- Audio para la animación de bienvenida -->
-    <audio id="welcomeSound" preload="auto">
-        <source src="https://www.soundjay.com/button/sounds/button-09.mp3" type="audio/mpeg">
-    </audio>
-
     <!-- Carga de datos y scripts -->
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
