--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
             </div>
             
             <!-- Paginación con estilo mejorado -->
-            <div class="pagination-container">
-                <button id="prevPage" class="pagination-btn enhanced-pagination" disabled>
-                    <i class="fas fa-chevron-left"></i> Anterior
-                </button>
-                <span id="pageInfo" class="page-info">Página 1 de 1</span>
-                <button id="nextPage" class="pagination-btn enhanced-pagination">
-                    Siguiente <i class="fas fa-chevron-right"></i>
-                </button>
-            </div>
+<!-- Paginación -->
+<div class="pagination-container">
+    <button id="prevPage" class="pagination-btn" disabled>
+        <i class="fas fa-chevron-left"></i> Anterior
+    </button>
+    <span id="pageInfo" class="page-info">Página 1 de 1</span>
+    <button id="nextPage" class="pagination-btn">
+        Siguiente <i class="fas fa-chevron-right"></i>
+    </button>
+</div>
         </section>
 
         <!-- Sección de contacto -->
@@ -303,3 +304,4 @@
     </script>
 </body>
 </html>
+
