--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                 </div>
                 <div class="guide-step">
                     <i class="fas fa-file-archive"></i>
-                    <h3>3. Extrae</h3>
+                    <h3>3. Extrae o usa un cliente torrent para instalarlo</h3>
                     <p>Usa la contraseña <strong>123</strong> para descomprimir</p>
                 </div>
                 <div class="guide-step">
                     <i class="fas fa-play"></i>
                     <h3>4. Juega</h3>
-                    <p>Ejecuta el instalador y disfruta del juego</p>
+                    <p>Ejecuta el instalador O Ejecuta directamente el juego y depues disfruta del juego</p>
                 </div>
             </div>
         </section>
@@ -410,4 +410,5 @@
     </script>
 </body>
 </html>
+
 
