--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
                             </a>
                         </div>
                     </div>
+<!-- Contenedor de extras opcionales -->
+<div class="download-options extra-downloads" id="extraDownloads" style="display:none;">
+    <h3>Extras disponibles:</h3>
+    <div class="links-extra">
+        <!-- Aquí se inyectarán los links de Voces Latinas o Online Fix desde JS -->
+    </div>
+</div>
                     <div class="comments-section">
                         <h3>Reseñas de usuarios</h3>
                         <div id="commentsContainer" class="comments-list"></div>
