--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-theme="dark" id="top">
-
+    <!-- Banner de icutlink visible al inicio -->
+  <div class="banner-top">
+    <a href="http://icutlink.com/ref/Jesus09xd">
+      <img src="https://icutlink.com/img/banner728.gif" alt="Publicidad">
+    </a>
+  </div>
     <!-- Pantalla de bienvenida animada -->
     <div id="welcomeScreen" class="welcome-screen">
         <div class="welcome-content">
@@ -418,6 +423,7 @@
     </script>
 </body>
 </html>
+
 
 
 
