--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-theme="dark" id="top">
+        <!-- Banner superior -->
+    <div class="banner-top" style="text-align:center; margin: 10px 0;">
+        <a href="http://icutlink.com/ref/Jesus09xd">
+            <img src="https://icutlink.com/img/banner728.gif" alt="Publicidad">
+        </a>
+    </div>
+    
     <!-- Pantalla de bienvenida animada -->
     <div id="welcomeScreen" class="welcome-screen">
         <div class="welcome-content">
@@ -417,6 +424,7 @@
     </script>
 </body>
 </html>
+
 
 
 
