--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5795479991735761"
      crossorigin="anonymous"></script>
-     
+         <!-- Google AdSense AMP -->
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+    
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -424,6 +428,7 @@
     </script>
 </body>
 </html>
+
 
 
 
