--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamesFullZ - Descarga Juegos Gratis</title>
+    <meta name="description" content="Descubre y descarga juegos gratis en GamesFullZ.revive el historial de tus títulos favoritos.">
     
     <!-- Fuentes modernas -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;600;700&family=Orbitron:wght@500;600;700&display=swap" rel="stylesheet">
@@ -432,3 +433,4 @@
     </script>
 </body>
 </html>
+
