--- a/index.html
+++ b/index.html
@@ -4,16 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamesFullZ - Descarga Juegos Gratis</title>
-      <!-- Código de Ad Manager -->
-  <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
-  <script>
-    window.googletag = window.googletag || {cmd: []};
-    googletag.cmd.push(function() {
-      googletag.defineSlot('/23318791520/GFZ_TOP_728x90', [728, 90], 'div-gpt-ad-1758490864512-0').addService(googletag.pubads());
-      googletag.pubads().enableSingleRequest();
-      googletag.enableServices();
-    });
-  </script>
     <meta name="description" content="Descubre y descarga juegos gratis en GamesFullZ.revive el historial de tus títulos favoritos.">
     
     <!-- Fuentes modernas -->
@@ -93,7 +83,16 @@
             <div class="gallery__container" id="gallery">
                 <!-- Los juegos se cargarán dinámicamente -->
             </div>
-            
+
+            <!-- 👇anuncio -->
+<div id='div-gpt-ad-1758490864512-0' 
+     style='min-width: 728px; min-height: 90px; margin: 30px auto; text-align:center;'>
+  <script>
+    googletag.cmd.push(function() { 
+      googletag.display('div-gpt-ad-1758490864512-0'); 
+    });
+  </script>
+   </div>         
             <!-- Paginación con navegación directa -->
             <div class="pagination-container">
                 <button id="prevPage" class="pagination-btn" disabled>
@@ -443,4 +442,3 @@
     </script>
 </body>
 </html>
-
